--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node app.js"
+    "start": "nodemon index.js"
   },
   "author": "adarsh",
   "license": "ISC",
