--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.3.9",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.16",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.12.0"
   }
 }
