--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^7.0.3",
     "mongoose": "^6.3.9",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.16",
