--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-redis": "^7.0.3",
     "mongoose": "^6.3.9",
+    "node-telegram-bot-api": "^0.61.0",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.16",
     "pug": "^3.0.2",
