--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "adarsh",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -19,7 +20,7 @@
     "jwt-redis": "^7.0.3",
     "mongoose": "^6.3.9",
     "node-telegram-bot-api": "^0.61.0",
-    "nodemailer": "^6.7.8",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.16",
     "pug": "^3.0.2",
     "ws": "^8.12.0"
